# live_differ

./: .gitignore  CONTRIBUTING.md  README.md  app.py  cli.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: changelog-config.json
.github/workflows/: release.yml  tests.yml
live_differ/: cli.py  core.py
live_differ/modules/: differ.py
live_differ/static/css/: styles.css
live_differ/templates/: index.html  index_footer.html  index_header.html
modules/: watcher.py
samples/: 10_large_file.txt  11_test_sample.txt  12_test_sample.txt  1_minor_diff.txt  2_minor_diff.txt  3_major_diff.txt  4_major_diff.txt  5_extra_lines.txt  6_extra_lines.txt  7_special_chars.txt  8_special_chars.txt  9_large_file.txt
scripts/: release.py
static/css/: styles.css
tests/: conftest.py  test_app.py  test_cli.py  test_differ.py
