[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "live_differ"
version = "0.1.0"
authors = [
    { name = "manthanby" },
]
description = "A real-time file difference viewer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask==2.3.3",
    "werkzeug==2.3.7",
    "flask-socketio==5.3.6",
    "watchdog==3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/manthanby/live_differ"

[tool.hatch.build.targets.wheel]
packages = ["modules", "differ"]
